--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Построение трехугольника</h1>
-        <p>Для просмотра отройте консоль!</p>
+        <p>Для просмотра откройте консоль!</p>
         <script src="script.js"></script>
     </body>
 </html>
